# wgetpaste

./: LICENSE  meson.build  meson.options  wgetpaste  wgetpaste.spec
.github/workflows/: run_test.yml
test/: test.sh  test_ansi.sh
